--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-199.9KB/s(Youtube:不良林), server: 38.68.134.85, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-1.50MB/s(Youtube:不良林), server: 38.75.136.21, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: 167.88.61.50, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-1.22MB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-227.0KB/s(Youtube:不良林), server: 38.75.136.102, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 38.75.136.102, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.51MB/s(Youtube:不良林), server: 38.114.114.19, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: 38.75.136.21, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇺🇸 美国-2.20MB/s(Youtube:不良林), server: 167.88.61.50, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇭🇰 (已存活1天)香港-3.64MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
   - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 38.75.136.102, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 38.114.114.19, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-1.15MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 未知国家-1.15MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
   - {name: 🇺🇸 美国-2.99MB/s(Youtube:不良林), server: su10.chaoxn.top, port: 80, type: vmess, uuid: 9e4a7268-4c66-49d9-b6fb-59e33c8c7c59, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: su10.chaoxn.top}}
   - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-199.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 未知国家-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-199.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 未知国家-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,34 +52,35 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-199.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 未知国家-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活1天)香港-3.64MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-199.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 未知国家-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +88,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-199.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 未知国家-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +104,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-199.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 未知国家-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +129,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-199.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.22MB/s(Youtube:不良林)
-      - 🇺🇸 美国-227.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.20MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.64MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.15MB/s(Youtube:不良林)
+      - 未知国家-1.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.99MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
 rules:
